<resources>
    <string name="app_name">Popular Movies</string>
                  <!-- Menu Items-->
    <string name="most_popular">Most popular</string>
    <string name="top_rated"> Top Rated</string>
    <string name="favorites">Favorites</string>

    <string name="image_description">Description Not Available</string>
                   <!--Details Activity Texts-->
    <string name="rating_default">N/A</string>
    <string name="overview_default">Overview is not Available</string>
    <string name="releaseDate_default">N/A</string>
    <string name="rating_title">Rating: </string>
    <string name="overview_title">Overview: </string>
    <string name="releaseDate_title">Release Date: </string>
    <string name="video_title">Video Title is Not Available</string>
    <string name="not_available">N/A</string>
    <string name="trailers_label">Trailers</string>
    <string name="reviews_label">Reviews </string>


    <!-- Error Messages -->
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="detail_error">Movie Data not Available</string>
    <string name="empty_favorite">There is no Favorite Movies Yet :(</string>
</resources>
